{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 4223,
  "lineage": "51f462b0-f083-6cf7-0dd3-b77e9c4347ce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-for-ngw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05330f4c8465a5fbc",
            "arn": "arn:aws:ec2:ap-northeast-2:381492295588:elastic-ip/eipalloc-05330f4c8465a5fbc",
            "domain": "vpc",
            "id": "eipalloc-05330f4c8465a5fbc",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-15-164-62-14.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.62.14",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ip-for-ngw-01"
            },
            "tags_all": {
              "Name": "ip-for-ngw-01"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-for-ngw-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0240d32dcb3864a8d",
            "arn": "arn:aws:ec2:ap-northeast-2:381492295588:elastic-ip/eipalloc-0240d32dcb3864a8d",
            "domain": "vpc",
            "id": "eipalloc-0240d32dcb3864a8d",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-202-239-11.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.239.11",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ip-for-ngw-02"
            },
            "tags_all": {
              "Name": "ip-for-ngw-02"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ori-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:381492295588:internet-gateway/igw-001f81102a854b8a6",
            "id": "igw-001f81102a854b8a6",
            "owner_id": "381492295588",
            "tags": {
              "Name": "ori-igw"
            },
            "tags_all": {
              "Name": "ori-igw"
            },
            "vpc_id": "vpc-0eef5225c4e20cd1c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ori-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:loadbalancer/app/ori-lb/24a33b7df9db3236",
            "arn_suffix": "app/ori-lb/24a33b7df9db3236",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ori-lb-1896661531.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:loadbalancer/app/ori-lb/24a33b7df9db3236",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ori-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01fc3a7b725f9a192",
              "sg-0f0982a8e03b4f701",
              "sg-0f737bbd9e516d1d9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0401a24f1ae3f3585"
              },
              {
                "subnet_id": "subnet-0adb3093754662fdb"
              }
            ],
            "subnets": [
              "subnet-0401a24f1ae3f3585",
              "subnet-0adb3093754662fdb"
            ],
            "tags": {
              "Name": "ori-lb"
            },
            "tags_all": {
              "Name": "ori-lb"
            },
            "vpc_id": "vpc-0eef5225c4e20cd1c",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.ori-sg-bastion",
            "aws_security_group.ori-sg-db",
            "aws_security_group.ori-sg-elb",
            "aws_subnet.ori-subnet-public-01",
            "aws_subnet.ori-subnet-public-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:listener/app/ori-lb/24a33b7df9db3236/0d3375acdf2504ba",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:targetgroup/frontend-tg/ed33a53cdcaeece9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:listener/app/ori-lb/24a33b7df9db3236/0d3375acdf2504ba",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:loadbalancer/app/ori-lb/24a33b7df9db3236",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ori-lb",
            "aws_lb_target_group.frontend-tg",
            "aws_security_group.ori-sg-bastion",
            "aws_security_group.ori-sg-db",
            "aws_security_group.ori-sg-elb",
            "aws_subnet.ori-subnet-public-01",
            "aws_subnet.ori-subnet-public-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:listener/app/ori-lb/24a33b7df9db3236/416a026e3d95bede",
            "certificate_arn": "arn:aws:acm:ap-northeast-2:381492295588:certificate/86ea57c1-9134-444d-b3ea-9d5e55d10104",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:targetgroup/frontend-tg/ed33a53cdcaeece9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:listener/app/ori-lb/24a33b7df9db3236/416a026e3d95bede",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:loadbalancer/app/ori-lb/24a33b7df9db3236",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ori-lb",
            "aws_lb_target_group.frontend-tg",
            "aws_security_group.ori-sg-bastion",
            "aws_security_group.ori-sg-db",
            "aws_security_group.ori-sg-elb",
            "aws_subnet.ori-subnet-public-01",
            "aws_subnet.ori-subnet-public-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:targetgroup/backend-tg/1aa2ac4cddd6a6e3",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:listener-rule/app/ori-lb/24a33b7df9db3236/0d3375acdf2504ba/7ae5f1168ff0ea0a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:listener-rule/app/ori-lb/24a33b7df9db3236/0d3375acdf2504ba/7ae5f1168ff0ea0a",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:listener/app/ori-lb/24a33b7df9db3236/0d3375acdf2504ba",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ori-lb",
            "aws_lb_listener.http",
            "aws_lb_target_group.backend-tg",
            "aws_lb_target_group.frontend-tg",
            "aws_security_group.ori-sg-bastion",
            "aws_security_group.ori-sg-db",
            "aws_security_group.ori-sg-elb",
            "aws_subnet.ori-subnet-public-01",
            "aws_subnet.ori-subnet-public-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:targetgroup/backend-tg/1aa2ac4cddd6a6e3",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:listener-rule/app/ori-lb/24a33b7df9db3236/416a026e3d95bede/7db9be1c46fa28d1",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:listener-rule/app/ori-lb/24a33b7df9db3236/416a026e3d95bede/7db9be1c46fa28d1",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:listener/app/ori-lb/24a33b7df9db3236/416a026e3d95bede",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ori-lb",
            "aws_lb_listener.https",
            "aws_lb_target_group.backend-tg",
            "aws_lb_target_group.frontend-tg",
            "aws_security_group.ori-sg-bastion",
            "aws_security_group.ori-sg-db",
            "aws_security_group.ori-sg-elb",
            "aws_subnet.ori-subnet-public-01",
            "aws_subnet.ori-subnet-public-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:targetgroup/frontend-tg/ed33a53cdcaeece9",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:listener-rule/app/ori-lb/24a33b7df9db3236/0d3375acdf2504ba/b59320857af9b36c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:listener-rule/app/ori-lb/24a33b7df9db3236/0d3375acdf2504ba/b59320857af9b36c",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:listener/app/ori-lb/24a33b7df9db3236/0d3375acdf2504ba",
            "priority": 200,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ori-lb",
            "aws_lb_listener.http",
            "aws_lb_target_group.frontend-tg",
            "aws_security_group.ori-sg-bastion",
            "aws_security_group.ori-sg-db",
            "aws_security_group.ori-sg-elb",
            "aws_subnet.ori-subnet-public-01",
            "aws_subnet.ori-subnet-public-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:targetgroup/frontend-tg/ed33a53cdcaeece9",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:listener-rule/app/ori-lb/24a33b7df9db3236/416a026e3d95bede/5d23475fd3bd3657",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:listener-rule/app/ori-lb/24a33b7df9db3236/416a026e3d95bede/5d23475fd3bd3657",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:listener/app/ori-lb/24a33b7df9db3236/416a026e3d95bede",
            "priority": 200,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ori-lb",
            "aws_lb_listener.https",
            "aws_lb_target_group.frontend-tg",
            "aws_security_group.ori-sg-bastion",
            "aws_security_group.ori-sg-db",
            "aws_security_group.ori-sg-elb",
            "aws_subnet.ori-subnet-public-01",
            "aws_subnet.ori-subnet-public-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "redirect_http_to_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "waitmate.shop",
                    "path": "/",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:listener-rule/app/ori-lb/24a33b7df9db3236/0d3375acdf2504ba/bd2c8ecfa06975ff",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:listener-rule/app/ori-lb/24a33b7df9db3236/0d3375acdf2504ba/bd2c8ecfa06975ff",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:listener/app/ori-lb/24a33b7df9db3236/0d3375acdf2504ba",
            "priority": 10,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ori-lb",
            "aws_lb_listener.http",
            "aws_lb_target_group.frontend-tg",
            "aws_security_group.ori-sg-bastion",
            "aws_security_group.ori-sg-db",
            "aws_security_group.ori-sg-elb",
            "aws_subnet.ori-subnet-public-01",
            "aws_subnet.ori-subnet-public-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:targetgroup/backend-tg/1aa2ac4cddd6a6e3",
            "arn_suffix": "targetgroup/backend-tg/1aa2ac4cddd6a6e3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-299",
                "path": "/healthy",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:targetgroup/backend-tg/1aa2ac4cddd6a6e3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "backend-tg"
            },
            "tags_all": {
              "Name": "backend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0eef5225c4e20cd1c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:targetgroup/frontend-tg/ed33a53cdcaeece9",
            "arn_suffix": "targetgroup/frontend-tg/ed33a53cdcaeece9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:381492295588:targetgroup/frontend-tg/ed33a53cdcaeece9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "frontend-tg"
            },
            "tags_all": {
              "Name": "frontend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0eef5225c4e20cd1c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ori-ngw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05330f4c8465a5fbc",
            "association_id": "eipassoc-095c185daa4eab403",
            "connectivity_type": "public",
            "id": "nat-05ce68ebd52318182",
            "network_interface_id": "eni-00119949e464efa03",
            "private_ip": "10.0.0.106",
            "public_ip": "15.164.62.14",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0401a24f1ae3f3585",
            "tags": {
              "Name": "ori-ngw-01"
            },
            "tags_all": {
              "Name": "ori-ngw-01"
            }
          },
          "dependencies": [
            "aws_eip.ip-for-ngw-01",
            "aws_subnet.ori-subnet-public-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ori-ngw-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0240d32dcb3864a8d",
            "association_id": "eipassoc-02ded88282ab6af3d",
            "connectivity_type": "public",
            "id": "nat-080b5cb2da239ac47",
            "network_interface_id": "eni-0def68c895209abcc",
            "private_ip": "10.0.30.138",
            "public_ip": "43.202.239.11",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0adb3093754662fdb",
            "tags": {
              "Name": "ori-ngw-02"
            },
            "tags_all": {
              "Name": "ori-ngw-02"
            }
          },
          "dependencies": [
            "aws_eip.ip-for-ngw-02",
            "aws_subnet.ori-subnet-public-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ori-private-route-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0953afe984c4521911080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05ce68ebd52318182",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0953afe984c452191",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ip-for-ngw-01",
            "aws_nat_gateway.ori-ngw-01",
            "aws_route_table.ori-private_rt-01",
            "aws_subnet.ori-subnet-public-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ori-private-route-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d05f2629268ebf9c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-080b5cb2da239ac47",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d05f2629268ebf9c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ip-for-ngw-02",
            "aws_nat_gateway.ori-ngw-02",
            "aws_route_table.ori-private_rt-02",
            "aws_subnet.ori-subnet-public-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ori-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-001f81102a854b8a6",
            "id": "r-rtb-0197351c01a4f7ec31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0197351c01a4f7ec3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ori-igw",
            "aws_route_table.ori-public_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ori-private_rt-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:381492295588:route-table/rtb-0953afe984c452191",
            "id": "rtb-0953afe984c452191",
            "owner_id": "381492295588",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ori-private_rt-01"
            },
            "tags_all": {
              "Name": "ori-private_rt-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eef5225c4e20cd1c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ori-private_rt-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:381492295588:route-table/rtb-0d05f2629268ebf9c",
            "id": "rtb-0d05f2629268ebf9c",
            "owner_id": "381492295588",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ori-private_rt-02"
            },
            "tags_all": {
              "Name": "ori-private_rt-02"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eef5225c4e20cd1c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ori-public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:381492295588:route-table/rtb-0197351c01a4f7ec3",
            "id": "rtb-0197351c01a4f7ec3",
            "owner_id": "381492295588",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ori-public_rt"
            },
            "tags_all": {
              "Name": "ori-public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eef5225c4e20cd1c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ori-subnet-private-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07126c613a1c187f6",
            "route_table_id": "rtb-0953afe984c452191",
            "subnet_id": "subnet-0bbaebb8867bbcebe"
          },
          "dependencies": [
            "aws_route_table.ori-private_rt-01",
            "aws_subnet.ori-subnet-private-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ori-subnet-private-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099b53aa87c5ead09",
            "route_table_id": "rtb-0d05f2629268ebf9c",
            "subnet_id": "subnet-0d7cebc119099c7dd"
          },
          "dependencies": [
            "aws_route_table.ori-private_rt-02",
            "aws_subnet.ori-subnet-private-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ori-subnet-public-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e49970e2a5ded86a",
            "route_table_id": "rtb-0197351c01a4f7ec3",
            "subnet_id": "subnet-0401a24f1ae3f3585"
          },
          "dependencies": [
            "aws_route_table.ori-public_rt",
            "aws_subnet.ori-subnet-public-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ori-subnet-public-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069cbf889cb23bdef",
            "route_table_id": "rtb-0197351c01a4f7ec3",
            "subnet_id": "subnet-0adb3093754662fdb"
          },
          "dependencies": [
            "aws_route_table.ori-public_rt",
            "aws_subnet.ori-subnet-public-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ori-sg-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:381492295588:security-group/sg-0f737bbd9e516d1d9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f737bbd9e516d1d9",
            "ingress": [],
            "name": "ori-sg-bastion",
            "name_prefix": "",
            "owner_id": "381492295588",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ori-sg-bastion"
            },
            "tags_all": {
              "Name": "ori-sg-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eef5225c4e20cd1c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ori-sg-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:381492295588:security-group/sg-01fc3a7b725f9a192",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01fc3a7b725f9a192",
            "ingress": [],
            "name": "ori-sg-db",
            "name_prefix": "",
            "owner_id": "381492295588",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ori-sg-db"
            },
            "tags_all": {
              "Name": "ori-sg-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eef5225c4e20cd1c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ori-sg-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:381492295588:security-group/sg-0f0982a8e03b4f701",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f0982a8e03b4f701",
            "ingress": [],
            "name": "ori-sg-elb",
            "name_prefix": "",
            "owner_id": "381492295588",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ori-sg-elb"
            },
            "tags_all": {
              "Name": "ori-sg-elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eef5225c4e20cd1c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ori-sg-bastion-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for ssh",
            "from_port": 22,
            "id": "sgrule-3986380713",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f737bbd9e516d1d9",
            "security_group_rule_id": "sgr-06097c7f36d31fda1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ori-sg-bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ori-sg-bastion-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all outbound",
            "from_port": 0,
            "id": "sgrule-2346603327",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f737bbd9e516d1d9",
            "security_group_rule_id": "sgr-01690cdff5323a64f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ori-sg-bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ori-sg-db-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for MySQL",
            "from_port": 3306,
            "id": "sgrule-832377304",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01fc3a7b725f9a192",
            "security_group_rule_id": "sgr-0a8ba877e444065eb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ori-sg-db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ori-sg-db-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all outbound",
            "from_port": 0,
            "id": "sgrule-874907577",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01fc3a7b725f9a192",
            "security_group_rule_id": "sgr-0cc0af5c7a5469e83",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ori-sg-db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ori-sg-elb-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for http",
            "from_port": 80,
            "id": "sgrule-274271103",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f0982a8e03b4f701",
            "security_group_rule_id": "sgr-045a8e49733d373b1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ori-sg-elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ori-sg-elb-inbound-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for backend",
            "from_port": 8080,
            "id": "sgrule-2633680326",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f0982a8e03b4f701",
            "security_group_rule_id": "sgr-0d166605f9581deb9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ori-sg-elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ori-sg-elb-inbound-react",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for react app",
            "from_port": 3000,
            "id": "sgrule-3550121938",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f0982a8e03b4f701",
            "security_group_rule_id": "sgr-04757ab166caf9b79",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ori-sg-elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ori-sg-elb-inbound2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for https",
            "from_port": 443,
            "id": "sgrule-2572602906",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f0982a8e03b4f701",
            "security_group_rule_id": "sgr-0cf9229ef7872dc8b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ori-sg-elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ori-sg-elb-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all outbound",
            "from_port": 0,
            "id": "sgrule-2463616421",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f0982a8e03b4f701",
            "security_group_rule_id": "sgr-0586b737b73864e9b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ori-sg-elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ori-subnet-private-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:381492295588:subnet/subnet-0bbaebb8867bbcebe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbaebb8867bbcebe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492295588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ori-subnet-private-01"
            },
            "tags_all": {
              "Name": "ori-subnet-private-01"
            },
            "vpc_id": "vpc-0eef5225c4e20cd1c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ori-subnet-private-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:381492295588:subnet/subnet-0d7cebc119099c7dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7cebc119099c7dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492295588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ori-subnet-private-02"
            },
            "tags_all": {
              "Name": "ori-subnet-private-02"
            },
            "vpc_id": "vpc-0eef5225c4e20cd1c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ori-subnet-public-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:381492295588:subnet/subnet-0401a24f1ae3f3585",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0401a24f1ae3f3585",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492295588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ori-subnet-public-01"
            },
            "tags_all": {
              "Name": "ori-subnet-public-01"
            },
            "vpc_id": "vpc-0eef5225c4e20cd1c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ori-subnet-public-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:381492295588:subnet/subnet-0adb3093754662fdb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adb3093754662fdb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492295588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ori-subnet-public-02"
            },
            "tags_all": {
              "Name": "ori-subnet-public-02"
            },
            "vpc_id": "vpc-0eef5225c4e20cd1c"
          }
        }
      ]
    }
  ]
}